[tool.poetry]
name = "flappy-bird"
version = "0.1.0"
description = ""
authors = ["aubin-tchoi <aubin.tchoi@gmail.com>"]
readme = "README.md"
packages = [{include = "flappy_bird"}]

[tool.poetry.dependencies]
python = "^3.10"
ipython = "^8.11.0"
jupyter = "^1.0.0"
numpy = "^1.24.2"
deep_rl = "==1.0"
matplotlib = "^3.7.1"
seaborn = "^0.12.2"
multimethod = "^1.9.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
